# parallel-trie

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
report/: Makefile  main.tex
src/: IDictionary.hpp  advanced_async_trie_dictionary.cpp  advanced_async_trie_dictionary.hpp  advanced_trie_dictionary.cpp  advanced_trie_dictionary.hpp  basic_trie_dictionary.cpp  basic_trie_dictionary.hpp  bench.cpp  tests.cpp
src/atd/: README.md  advanced_trie.cpp  advanced_trie.hpp  line.hpp  linepool.cpp  linepool.hpp  task.cpp  task.hpp  task_stack.cpp  task_stack.hpp
src/btd/: basic_trie.cpp  basic_trie.hpp
